[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mundo.gd" type="Script" id=2]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 637, -1, 0, 0, 0, 0, 637, 956, 0, 0, 0, 0, -1, 956, 0, 0, 0, 0, 0, 0 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
Roca = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="RocaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="IniciorTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PosicionDeInicio" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="camino"]
rotation = -0.00156986

[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="RocaTimer" to="." method="_on_RocaTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="IniciorTimer" to="." method="_on_IniciorTimer_timeout"]
